--- a/cfauth.ini
+++ b/cfauth.ini
@@ -1,4 +1,4 @@
 [tokens]
-zone_id=<YOUR_ZONE_ID>
-bearer_token=<YOUR_BEARER_TOKEN>
-record_id=<YOUR_DNS_RECORD_ID>
+zone_id=e089e772a46fee022d1fa8bbf3906f9c
+bearer_token=YcDovD8AtplYmVbjG3Yk5RfNlaV8PrRdO08WRTRy
+record_id=17c2f8fe784ceee92988224b07c58abe
